--- a/index.html
+++ b/index.html
@@ -83,5 +83,57 @@
         </div>
     </section>
 
+    <!-- QUOTE SECTION -->
+<section class="quote-section">
+    <div class="quote-box">
+        <img src="assets/quote-bg.png" alt="Quote icon" class="quote-bg">
+
+        <p class="quote-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Fugit qui, officiis nostrum magni provident atque facere
+            eveniet rerum veniam consequuntur. Ullam rem, ratione
+            distinctio soluta consectetur.
+        </p>
+
+        <p class="quote-author">
+            <strong>Dr. Muhammad Yunus</strong><br>
+            <span>Chief Adviser of the People's Republic of Bangladesh</span>
+        </p>
+    </div>
+</section>
+
+
+<!-- OPINION SECTION -->
+<section class="opinion-section">
+    <h2>Your Opinion Matters</h2>
+
+    <div class="opinion-box">
+        <div class="opinion-row">
+            <p>Do you believe Bangladesh is on the right path toward becoming a developed nation?</p>
+            <select>
+                <option>Yes, I agree</option>
+                <option>No, I disagree</option>
+            </select>
+        </div>
+
+        <div class="opinion-row">
+            <p>Do you believe Bangladesh is on the right path toward becoming a digital nation?</p>
+            <select>
+                <option>Yes, I agree</option>
+                <option>No, I disagree</option>
+            </select>
+        </div>
+
+        <div class="opinion-row">
+            <p>Do you believe Bangladesh is on the right path toward becoming a developed country?</p>
+            <select>
+                <option>Yes, I agree</option>
+                <option>No, I disagree</option>
+            </select>
+        </div>
+    </div>
+</section>
+
+
 </body>
 </html>
