--- a/index.html
+++ b/index.html
@@ -133,6 +133,69 @@
         </div>
     </div>
 </section>
+<!-- RECENT NEWS SECTION -->
+<section class="news-section">
+    <h2>Recent News</h2>
+    <p class="news-intro">
+        Bangladesh 2.0 aims to redefine the nation's trajectory by embracing cutting-edge technology,
+        promoting inclusive growth, and ensuring sustainability.
+    </p>
+
+    <div class="news-list">
+
+        <!-- NEWS ITEM 1 -->
+        <div class="news-card">
+            <div class="news-image">
+                <img src="assets/satelite.png" alt="Satellite">
+            </div>
+
+            <div class="news-content">
+                <h3>Bangladesh Launches New Satellite</h3>
+                <p class="source">🌐 ALJAZEERA &nbsp; | &nbsp; Date: 05/09/2025 &nbsp; | &nbsp; Time: 10:25 PM</p>
+                <p class="news-text">
+                    Not until the creation and maintenance of decent conditions of life for all people are
+                    recognized and accepted as a common obligation of all people shall an enduring peace be possible.
+                </p>
+                <button class="btn-read">Read More</button>
+            </div>
+        </div>
+
+        <!-- NEWS ITEM 2 (REVERSED) -->
+        <div class="news-card reverse">
+            <div class="news-image">
+                <img src="assets/satelite.png" alt="Satellite">
+            </div>
+
+            <div class="news-content">
+                <h3>Bangladesh Launches New Satellite</h3>
+                <p class="source">🌐 ALJAZEERA &nbsp; | &nbsp; Date: 05/09/2025 &nbsp; | &nbsp; Time: 10:25 PM</p>
+                <p class="news-text">
+                    Not until the creation and maintenance of decent conditions of life for all people are
+                    recognized and accepted as a common obligation of all people shall an enduring peace be possible.
+                </p>
+                <button class="btn-read">Read More</button>
+            </div>
+        </div>
+
+        <!-- NEWS ITEM 3 -->
+        <div class="news-card">
+            <div class="news-image">
+                <img src="assets/satelite.png" alt="Satellite">
+            </div>
+
+            <div class="news-content">
+                <h3>Bangladesh Launches New Satellite</h3>
+                <p class="source">🌐 ALJAZEERA &nbsp; | &nbsp; Date: 05/09/2025 &nbsp; | &nbsp; Time: 10:25 PM</p>
+                <p class="news-text">
+                    Not until the creation and maintenance of decent conditions of life for all people are
+                    recognized and accepted as a common obligation of all people shall an enduring peace be possible.
+                </p>
+                <button class="btn-read">Read More</button>
+            </div>
+        </div>
+
+    </div>
+</section>
 
 
 </body>
