last and final commit

--- a/index.html
+++ b/index.html
@@ -196,6 +196,54 @@
 
     </div>
 </section>
+<section class="donate-section">
+  <h2>Donate Today</h2>
+  <p class="subtitle">
+    Bangladesh 2.0 aims to redefine the nation's trajectory by embracing cutting-edge
+    technologies, promoting inclusive growth, and ensuring sustainability.
+  </p>
+
+  <div class="donation-options">
+    <button>100 Taka</button>
+    <button class="active">200 Taka</button>
+    <button>500 Taka</button>
+    <button>1000 Taka</button>
+  </div>
+
+  <input type="text" class="other-amount" placeholder="Other Amount (Taka)" />
+
+  <button class="donate-btn">Donate Now</button>
+</section>
+
+<section class="newsletter-section">
+  <h2>Subscribe Newsletter</h2>
+  <p>
+    Bangladesh 2.0 aims to redefine the nation's trajectory by embracing cutting-edge
+    technologies, promoting inclusive growth.
+  </p>
+
+  <div class="newsletter-form">
+    <input type="email" placeholder="Enter your email here" />
+    <button>Subscribe</button>
+  </div>
+
+  <small>We promise not to spam you</small>
+</section>
+<footer class="site-footer">
+  <h3>Bangladesh 2.0</h3>
+
+  <div class="social-icons">
+    <a href="#" aria-label="Facebook">
+      <img src="assets/facebook.png" alt="Facebook">
+    </a>
+    <a href="#" aria-label="Instagram">
+      <img src="assets/instagram.png" alt="Instagram">
+    </a>
+    <a href="#" aria-label="X">
+      <img src="assets/x.png" alt="X">
+    </a>
+  </div>
+</footer>
 
 
 </body>
